# Senos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
app/: AboutWindow.cpp  AboutWindow.hpp  App.cpp  App.hpp  Configuration.cpp  Configuration.hpp  ConfigurationMigrations.cpp  ConfigurationPresets.cpp  Menu.hpp  Platform.hpp  Platform_osx.mm  Platform_win.cpp  SettingsWindow.cpp  SettingsWindow.hpp  Window.cpp  Window.hpp
app/assets/: app.rc.in  icon.cpp  startup.cpp
app/assets/images/: icon.xcf  senos.icns
app/instrument/: DrumMachineWindow.cpp  DrumMachineWindow.hpp  Dx7Window.cpp  Dx7Window.hpp  SynthMachineWindow.cpp  SynthMachineWindow.hpp  TB303Window.cpp  TB303Window.hpp
app/tools/: ChainerWindow.cpp  ChainerWindow.hpp  DebugWindow.cpp  DebugWindow.hpp  KeyboardWindow.cpp  KeyboardWindow.hpp  ScopeWindow.cpp  ScopeWindow.hpp  SequencerWindow.cpp  SequencerWindow.hpp  VUMeterWindow.cpp  VUMeterWindow.hpp
cfg/midi/: Keystep 37.json
engine/: Chainer.cpp  Chainer.hpp  Engine.cpp  Engine.hpp  Sequencer.cpp  Sequencer.hpp
engine/audio/: Analyser.cpp  Analyser.hpp  Audio.cpp  Audio.hpp  CircularBuffer.hpp  Easing.cpp  Easing.hpp  Midi.cpp  Midi.hpp  Recorder.cpp  Recorder.hpp  RunningAverage.hpp  RunningStats.hpp  Wav.cpp  Wav.hpp
engine/core/: Lang.cpp  Lang.hpp  Log.cpp  Log.hpp  Text.cpp  Text.hpp  Worker.cpp  Worker.hpp
engine/instrument/: DrumMachine.cpp  DrumMachine.hpp  Dx7.cpp  Dx7.hpp  Instrument.cpp  Instrument.hpp  SynthMachine.cpp  SynthMachine.hpp  TB303.cpp  TB303.hpp
engine/instrument/dx7/: controllers.h  dx7note.cc  dx7note.h  env.cc  env.h  exp2.cc  exp2.h  fm_core.cc  fm_core.h  fm_op_kernel.cc  fm_op_kernel.h  freqlut.cc  freqlut.h  lfo.cc  lfo.h  module.h  patch.cc  patch.h  pitchenv.cc  pitchenv.h  sin.cc  sin.h  synth.h  tuning.cc  tuning.h
engine/instrument/dx7/banks/: Banks.cpp  Banks.hpp  EGreyMatter.cpp  Factory.cpp  Finetales.cpp  VRC.cpp
engine/instrument/synthmachine/: Envelope.cpp  Envelope.hpp  Filter.cpp  Filter.hpp  Oscillator.cpp  Oscillator.hpp  Value.cpp  Value.hpp
engine/instrument/tb303/: GlobalFunctions.h  fft4g.c  rosic_AnalogEnvelope.cpp  rosic_AnalogEnvelope.h  rosic_FourierTransformerRadix2.cpp  rosic_FunctionTemplates.h  rosic_MidiNoteEvent.h  rosic_Open303.cpp  rosic_Open303.h  rosic_RealFunctions.h  rosic_TeeBeeFilter.h
